--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,24 +4,190 @@
     <meta charset="UTF-8">
     <title>Início</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/webjars/bootstrap/5.3.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/webjars/bootstrap/5.3.3/css/bootstrap.css">
+    <link rel="stylesheet" href="webjars/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 <body>
 
-<!-- Navbar -->
-<div th:replace="~{fragments/navbar :: navbar}"></div>
+<!-- publicities -->
+<div class="fixed-top">
 
-<!-- main content -->
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 offset-md-3">
-            <h1>Olá, seja bem-vindo! <span th:text="${user.name} + ' ' + ${user.surname}"></span> </h1>
-            <span th:text="${user.username}"></span>
-            <p>Este é um exemplo de aplicação web utilizando Spring Boot e Thymeleaf.</p>
-            <p><a th:href="@{/logout}">Clique aqui</a> para fazer Logout.</p>
+    <div class="container-fluid bg-white p-0">
+        <p class="text-uppercase text-center text-muted fw-bold mb-0">
+            grêmio de representação estudantil rupestre - 2024
+        </p>
+    </div>
+
+    <!-- Navbar -->
+    <div th:replace="~{fragments/navbar :: navbar}"></div>
+
+</div>
+
+<!-- Title -->
+<header style="margin-top: 7em">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <img src="/img/logo.svg" class="logo-title img-fluid d-block w-100" alt="Jornal IF">
+            </div>
         </div>
     </div>
-</div>
+</header>
+
+<hr>
+
+<!-- Articles -->
+<section>
+    <div class="container">
+
+        <!-- Title -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="text-center">Artigos</h2>
+                <p class="text-center">Confira as notícias mais recentes sobre nosso campus.</p>
+            </div>
+        </div>
+
+        <div class="row row-gap-0">
+            <!-- Articles -->
+            <div class="col-xl-8 col-lg-12">
+                <!-- Article Card -->
+                <div class="row">
+                    <div class="col-lg-8 article" id="articleContainer">
+                        <div class="card mb-3">
+                            <div class="card-img" id="articleImage">
+                                <img src="https://placehold.co/200" alt="Artigo 1">
+                            </div>
+                            <div class="card-body" id="articleContent">
+                                <p class="text-muted fw-medium text-start">Categoria</p>
+                                <h5 class="card-title text-start">Artigo 1</h5>
+                                <div class="d-md-block d-none">
+                                    <p class="card-subtile text-start">Texto Descritivo - subtitulo</p>
+                                    <p class="text-muted text-start">Publicado em 06/07/2024 - Em Jornal IF</p>
+                                </div>
+                                <a href="#" class="btn btn-about">Ler mais</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <hr>
+
+                <!-- Article Card -->
+                <div class="row">
+                    <div class="col-lg-8 article" id="articleContainer">
+                        <div class="card mb-3">
+                            <div class="card-img" id="articleImage">
+                                <img src="https://placehold.co/200" alt="Artigo 1">
+                            </div>
+                            <div class="card-body" id="articleContent">
+                                <p class="text-muted fw-medium text-start">Categoria</p>
+                                <h5 class="card-title text-start">Artigo 1</h5>
+                                <div class="d-md-block d-none">
+                                    <p class="card-subtile text-start">Texto Descritivo - subtitulo</p>
+                                    <p class="text-muted text-start">Publicado em 06/07/2024 - Em Jornal IF</p>
+                                </div>
+                                <a href="#" class="btn btn-about">Ler mais</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <hr>
+
+                <!-- Article Card -->
+                <div class="row">
+                    <div class="col-lg-8 article" id="articleContainer">
+                        <div class="card mb-3">
+                            <div class="card-img" id="articleImage">
+                                <img src="https://placehold.co/200" alt="Artigo 1">
+                            </div>
+                            <div class="card-body" id="articleContent">
+                                <p class="text-muted fw-medium text-start">Categoria</p>
+                                <h5 class="card-title text-start">Artigo 1</h5>
+                                <div class="d-md-block d-none">
+                                    <p class="card-subtile text-start">Texto Descritivo - subtitulo</p>
+                                    <p class="text-muted text-start">Publicado em 06/07/2024 - Em Jornal IF</p>
+                                </div>
+                                <a href="#" class="btn btn-about">Ler mais</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <hr>
+
+                <!-- Article Card -->
+                <div class="row">
+                    <div class="col-lg-8 article" id="articleContainer">
+                        <div class="card mb-3">
+                            <div class="card-img" id="articleImage">
+                                <img src="https://placehold.co/200" alt="Artigo 1">
+                            </div>
+                            <div class="card-body" id="articleContent">
+                                <p class="text-muted fw-medium text-start">Categoria</p>
+                                <h5 class="card-title text-start">Artigo 1</h5>
+                                <div class="d-md-block d-none">
+                                    <p class="card-subtile text-start">Texto Descritivo - subtitulo</p>
+                                    <p class="text-muted text-start">Publicado em 06/07/2024 - Em Jornal IF</p>
+                                </div>
+                                <a href="#" class="btn btn-about">Ler mais</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <hr>
+
+                <!-- pagination -->
+                <div class="row">
+                    <div class="col-lg-12">
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination justify-content-center">
+                                <li class="page-item disabled">
+                                    <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Anterior</a>
+                                </li>
+                                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#">Próximo</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Sidebar -->
+            <div class="col-xl-4 d-none d-xl-block">
+                <aside class="sticky-top">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-4 w-100">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Sobre</h5>
+                                        <p class="card-text">O Jornal IF é um projeto de extensão do Instituto Federal de Educação, Ciência e Tecnologia de São Raimundo Nonato.</p>
+                                        <a href="#" class="btn btn-about">Ler mais</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </aside>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+<!-- Footer -->
+<div th:replace="~{fragments/footer :: footer}"></div>
 
 <!-- Bootstrap JS -->
 <script src="/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
