--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,54 +1,53 @@
-<!DOCTYPE html>
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <title>Página de Login</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="webjars/bootstrap/5.3.3/css/bootstrap.min.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/login.css">
 </head>
-<body style="
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    overflow: hidden;
-">
+<body class="bg-login">
 <div class="container">
-    <div class="row">
-        <div class="col-md-6 offset-md-3">
-
-            <!-- Mensagem de erro -->
-            <div th:if="${param.error}" class="alert alert-danger mt-3" role="alert">
-                Usuário ou senha inválidos!
-            </div>
-            <div th:if="${param.errorNotLogged}" class="alert alert-danger mt-3" role="alert">
-                Faça login para acessar a página!
-            </div>
-
-            <!-- Formulário de login -->
-            <h1>Login</h1>
-            <form th:action="@{/login/user}" th:object="${user}" method="post">
-                <div class="mb-3">
-                    <label for="username" class="form-label">Nome de usuário</label>
-                    <input type="text" class="form-control" id="username" name="username" th:field="*{username}" required>
-                </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Senha</label>
-                    <input type="password" class="form-control" id="password" name="password" th:field="*{password}" required>
-                </div>
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="rememberMe" name="rememberMe">
-                    <label class="form-check-label" for="rememberMe">Lembrar de mim</label>
-                </div>
-                <button type="submit" class="btn btn-primary">Entre</button>
-            </form>
-            <p class="mt-3 text-center">Não possui uma conta ainda? <a href="/register" class="link-primary">Crie agora</a></p>
-            <!-- Guest login -->
-            <form th:action="@{/login/guest}" method="post" class="mt-3 d-flex justify-content-center align-items-center">
-                <button type="submit" class="btn btn-secondary">Entrar como convidado</button>
-            </form>
-        </div>
+    <!-- Mensagem de erro -->
+    <div th:if="${param.error}" class="alert alert-danger mt-3" role="alert">
+        Usuário ou senha inválidos!
     </div>
+    <div th:if="${param.errorNotLogged}" class="alert alert-danger mt-3" role="alert">
+        Faça login para acessar a página!
+    </div>
+
+    <div class="bg-white px-3 py-1 rounded-3 shadow-lg">
+        <!-- logo -->
+        <div class="logo">
+            <img src="/img/logo.svg" alt="logo">
+        </div>
+        <!-- Formulário de login -->
+        <h1 class="text-center fw-bold mb-3">Entre</h1>
+        <form th:action="@{/login/user}" th:object="${user}" method="post" class="form mx-auto">
+            <div class="mb-3">
+                <label for="username" class="form-label">Nome de usuário</label>
+                <input type="text" class="form-control" id="username" name="username" th:field="*{username}" autofocus required>
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Senha</label>
+                <input type="password" class="form-control" id="password" name="password" th:field="*{password}" required>
+            </div>
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="rememberMe" name="rememberMe">
+                <label class="form-check-label" for="rememberMe">Lembrar de mim</label>
+            </div>
+            <button type="submit" class="btn">Entre</button>
+        </form>
+        <p class="mt-3 text-center">Não possui uma conta ainda? <a href="/register" class="link">Crie agora</a></p>
+        <!-- Guest login -->
+        <form th:action="@{/login/guest}" method="post" class="mt-3 d-flex justify-content-center align-items-center mx-auto">
+            <button type="submit" class="btn-guest">Entrar como convidado</button>
+        </form>
+    </div>
+
 </div>
 
 <!-- Bootstrap JS -->
