--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,37 +5,40 @@
     <title>Página de Cadastro</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/webjars/bootstrap/5.3.3/css/bootstrap.min.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/login.css">
 </head>
-<body style="
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    overflow: hidden;
-">
+<body class="bg-register">
 
-<div class="container">
+<div class="container bg-white p-3 rounded-3 shadow-lg">
+    <!-- Mensagem de erro -->
+    <div th:if="${param.error}" class="alert alert-danger" role="alert">
+        Usuário ou senha inválidos!
+    </div>
+    <div th:if="${param.errorUser}" class="alert alert-danger" role="alert">
+        Usuário já cadastrado!
+    </div>
+    <div th:if="${param.errorEmail}" class="alert alert-danger" role="alert">
+        Verifique o e-mail informado!
+    </div>
+
     <div class="row">
-        <div class="col-md-6 offset-md-3">
 
-            <!-- Mensagem de erro -->
-            <div th:if="${param.error}" class="alert alert-danger" role="alert">
-                Usuário ou senha inválidos!
+        <!-- logo -->
+        <div class="col-md-6 col-12 d-flex align-items-center justify-content-center">
+            <div class="logo2">
+                <img src="/img/logo.svg" alt="logo">
             </div>
-            <div th:if="${param.errorUser}" class="alert alert-danger" role="alert">
-                Usuário já cadastrado!
-            </div>
-            <div th:if="${param.errorEmail}" class="alert alert-danger" role="alert">
-                Verifique o e-mail informado!
-            </div>
+        </div>
 
-
-            <!-- Formulário de cadastro -->
-            <h1>Cadastro</h1>
-            <form method="post" th:action="@{/register/user}" th:object="${user}">
+        <!-- Formulário de cadastro -->
+        <div class="col-md-6 col-12 d-flex flex-column align-items-center justify-content-center">
+            <h1 class="text-center fw-bold mt-2 mb-3">Cadastro</h1>
+            <form class="form mx-auto w-100" method="post" th:action="@{/register/user}" th:object="${user}">
                 <div class="mb-3">
                     <label for="username" class="form-label">Nome de usuário</label>
-                    <input type="text" class="form-control" id="username" name="username" th:field="*{username}" required>
+                    <input type="text" class="form-control" id="username" name="username" th:field="*{username}" autofocus required>
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">E-mail</label>
@@ -53,14 +56,26 @@
                     <label for="password" class="form-label">Senha</label>
                     <input type="password" class="form-control" id="password" name="password" th:field="*{password}" required>
                 </div>
-                <button type="submit" onclick="cadastrar()" class="btn btn-primary">Cadastrar</button>
+                <button type="submit" onclick="cadastrar()" class="btn">Cadastrar</button>
             </form>
-            <p class="mt-3 text-center">Já possui uma conta? <a href="/login" class="link-primary">Entre agora</a></p>
+            <p class="mt-3 text-center">Já possui uma conta? <a href="/login" class="link">Entre agora</a></p>
         </div>
+
     </div>
+
 </div>
 
 <!-- Bootstrap JS -->
 <script src="/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
+<!-- Custom JS -->
+<script>
+    // error
+    function errorFormControl() {
+        const formControl = document.querySelectorAll('.form-control');
+        formControl.forEach((element) => {
+            element.classList.add('is-invalid');
+        });
+    }
+</script>
 </body>
 </html>
