--- a/src/main/resources/static/sass/navbar.sass
+++ b/src/main/resources/static/sass/navbar.sass
@@ -8,6 +8,7 @@
   border-bottom: 1px solid $navbar-border
   border-radius: 0
   margin-bottom: 0
+  z-index: 1
 
   .offcanvas-body
     .navbar-nav
