--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,13 +13,20 @@
 </head>
 <body>
 
-<!-- publicities -->
+<!-- advertisement and navbar -->
 <div class="fixed-top">
 
     <div class="container-fluid bg-white p-0">
         <p class="text-uppercase text-center text-muted fw-bold mb-0">
             grêmio de representação estudantil rupestre - 2024
         </p>
+        <!-- user is admin -->
+        <div th:if="
+            ${#authorization.expression('hasRole(''ADMIN'')')}">
+            <a href="/admin" class="btn btn-sm btn-outline-primary position-absolute top-0 end-0 mt-1 me-1">
+                <i class="bi bi-gear"></i>
+            </a>
+        </div>
     </div>
 
     <!-- Navbar -->
@@ -44,6 +51,51 @@
 <section>
     <div class="container">
 
+        <!-- First Page -->
+        <div class="row row-cols-2 row-gap-1 first-page">
+
+            <!-- Article Card -->
+            <div class="col-12 col-lg-6">
+                <h3 class="fw-bold text-center">Primeira Página</h3>
+                <div class="card rounded-3 mb-3" id="CardFirstPage">
+                    <div class="card-body d-flex flex-column justify-content-center align-items-center text-center" id="articleContent">
+                        <p class="text-muted fw-medium text-start">Categoria</p>
+                        <h1 class="card-title text-start">Artigo 1</h1>
+                        <div class="d-md-block d-none text-center">
+                            <p class="card-subtile text-start">Texto Descritivo - subtitulo</p>
+                            <p class="text-muted text-start">Publicado em 06/07/2024 - Em Jornal IF</p>
+                        </div>
+                        <a href="#" class="btn btn-about">Ler mais</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Article Card -->
+            <div class="col-lg-6 d-none d-lg-block">
+
+                <div class="article-first-page row mb-1">
+                    <a href="#" class="article-link text-decoration-none rounded-3">
+                        <p class="text-muted fw-bold">Categoria</p>
+                        <h3 class="card-title text-start">Texto de exemplo para título</h3>
+                    </a>
+
+                </div>
+
+                <div class="article-first-page row">
+
+                    <a href="#" class="article-link text-decoration-none rounded-3">
+                        <p class="text-muted fw-bold">Categoria</p>
+                        <h3 class="card-title text-start">Texto de exemplo para título</h3>
+                    </a>
+
+                </div>
+
+            </div>
+
+        </div>
+
+        <hr>
+
         <!-- Title -->
         <div class="row">
             <div class="col-lg-12">
@@ -52,6 +104,7 @@
             </div>
         </div>
 
+        <!-- Articles -->
         <div class="row row-gap-0">
             <!-- Articles -->
             <div class="col-xl-8 col-lg-12">
@@ -167,13 +220,23 @@
             <div class="col-xl-4 d-none d-xl-block">
                 <aside class="sticky-top">
                     <div class="container">
-                        <div class="row">
+                        <div class="row mb-3">
                             <div class="col-lg-4 w-100">
                                 <div class="card">
                                     <div class="card-body">
                                         <h5 class="card-title">Sobre</h5>
                                         <p class="card-text">O Jornal IF é um projeto de extensão do Instituto Federal de Educação, Ciência e Tecnologia de São Raimundo Nonato.</p>
                                         <a href="#" class="btn btn-about">Ler mais</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-lg-4 w-100 adv">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h5 class="card-title text-center">Publicidade</h5>
+                                        <img src="https://placehold.co/330x600" alt="Publicidade" class="img-fluid w-100 mx-auto rounded-5">
                                     </div>
                                 </div>
                             </div>
