--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
-    <title>Início</title>
+    <title>Jornal IF - Início</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/webjars/bootstrap/5.3.3/css/bootstrap.css">
     <link rel="stylesheet" href="webjars/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
@@ -14,18 +14,37 @@
 <body>
 
 <!-- advertisement and navbar -->
-<div class="fixed-top">
+<div class="fixed-top" id="header">
 
     <div class="container-fluid bg-white p-0">
         <p class="text-uppercase text-center text-muted fw-bold mb-0">
             grêmio de representação estudantil rupestre - 2024
         </p>
-        <!-- user is admin -->
-        <div th:if="
-            ${#authorization.expression('hasRole(''ADMIN'')')}">
-            <a href="/admin" class="btn btn-sm btn-outline-primary position-absolute top-0 end-0 mt-1 me-1">
-                <i class="bi bi-gear"></i>
-            </a>
+    </div>
+
+    <!-- Admin -->
+    <div class="container-fluid bg-light p-0">
+        <p sec:authorize="hasRole('ROLE_ADMIN')" class="text-uppercase text-center text-muted fw-bold mb-0">
+            Você está logado como administrador
+        </p>
+    </div>
+
+    <!-- News Editor -->
+    <div sec:authorize="hasRole('ROLE_NEWS')">
+        <div class="container-fluid bg-light p-0">
+            <p class="text-uppercase text-center text-muted fw-bold mb-0">
+                Você está logado como editor de notícias.
+            </p>
+        </div>
+    </div>
+
+    <!-- Not logged -->
+    <div sec:authorize="!isAuthenticated()" class="d-none d-md-block">
+        <div class="container-fluid bg-light p-0">
+            <p class="text-uppercase text-center text-muted fw-bold mb-0">
+                <strong>Você não possui uma conta.</strong>
+                Faça <a href="/login" class="text-decoration-none">login</a> ou <a href="/register" class="text-decoration-none">cadastre-se</a>
+            </p>
         </div>
     </div>
 
@@ -45,8 +64,6 @@
     </div>
 </header>
 
-<hr>
-
 <!-- Articles -->
 <section>
     <div class="container">
@@ -58,14 +75,14 @@
             <div class="col-12 col-lg-6">
                 <h3 class="fw-bold text-center">Primeira Página</h3>
                 <div class="card rounded-3 mb-3" id="CardFirstPage">
-                    <div class="card-body d-flex flex-column justify-content-center align-items-center text-center" id="articleContent">
-                        <p class="text-muted fw-medium text-start">Categoria</p>
-                        <h1 class="card-title text-start">Artigo 1</h1>
+                    <div class="card-body d-flex flex-column justify-content-center align-items-center text-center" id="articleContent" th:if="${not #lists.isEmpty(articles)}">
+                        <p class="text-muted fw-medium text-start" th:text="${articles[0].category.getName()}"></p>
+                        <h1 class="card-title text-start" th:text="${articles[0].title}"></h1>
                         <div class="d-md-block d-none text-center">
-                            <p class="card-subtile text-start">Texto Descritivo - subtitulo</p>
-                            <p class="text-muted text-start">Publicado em 06/07/2024 - Em Jornal IF</p>
+                            <p class="card-subtile text-start" th:text="${articles[0].subtitle}"></p>
+                            <p class="text-muted text-start" th:text="${#temporals.format(articles[0].dateCreated, 'dd/MM/yyyy')}"></p>
                         </div>
-                        <a href="#" class="btn btn-about">Ler mais</a>
+                        <a th:href="@{/articles/{id}(id=${articles[0].id})}" class="btn btn-primary">Ler Mais</a>
                     </div>
                 </div>
             </div>
@@ -73,19 +90,30 @@
             <!-- Article Card -->
             <div class="col-lg-6 d-none d-lg-block">
 
-                <div class="article-first-page row mb-1">
-                    <a href="#" class="article-link text-decoration-none rounded-3">
-                        <p class="text-muted fw-bold">Categoria</p>
-                        <h3 class="card-title text-start">Texto de exemplo para título</h3>
+                <div class="article-first-page row mb-1" th:if="${not #lists.isEmpty(articles)}">
+
+                    <a class="article-link text-decoration-none rounded-3" th:href="@{/articles/{id}(id=${articles[1].id})}">
+                        <div class="card-img"
+                             th:style="'background-image: url(' + ${articles[1].imageUrl} + ');'">
+                            <div class="card-body">
+                                <p class="text-muted fw-bold" th:text="${articles[1].category.getName()}"></p>
+                                <h3 class="card-title text-start" th:text="${articles[1].subtitle}"></h3>
+                            </div>
+                        </div>
                     </a>
 
                 </div>
 
-                <div class="article-first-page row">
+                <div class="article-first-page row" th:if="${not #lists.isEmpty(articles)}">
 
-                    <a href="#" class="article-link text-decoration-none rounded-3">
-                        <p class="text-muted fw-bold">Categoria</p>
-                        <h3 class="card-title text-start">Texto de exemplo para título</h3>
+                    <a class="article-link text-decoration-none rounded-3" th:href="@{/articles/{id}(id=${articles[2].id})}">
+                        <div class="card-img"
+                             th:style="'background-image: url(' + ${articles[2].imageUrl} + ');'">
+                            <div class="card-body">
+                                <p class="text-muted fw-bold" th:text="${articles[2].category.getName()}"></p>
+                                <h3 class="card-title text-start" th:text="${articles[2].subtitle}"></h3>
+                            </div>
+                        </div>
                     </a>
 
                 </div>
@@ -108,112 +136,34 @@
         <div class="row row-gap-0">
             <!-- Articles -->
             <div class="col-xl-8 col-lg-12">
+
                 <!-- Article Card -->
                 <div class="row">
                     <div class="col-lg-8 article" id="articleContainer">
-                        <div class="card mb-3">
+                        <div class="card mb-3" th:each="article, iterStart : ${articles}" th:if="${iterStart.index > 3}">
                             <div class="card-img" id="articleImage">
-                                <img src="https://placehold.co/200" alt="Artigo 1">
+                                <img th:src="@{${article.imageUrl}}" class="img-fluid rounded-3" alt="Imagem do artigo">
                             </div>
                             <div class="card-body" id="articleContent">
-                                <p class="text-muted fw-medium text-start">Categoria</p>
-                                <h5 class="card-title text-start">Artigo 1</h5>
+                                <p class="text-muted fw-medium text-start" th:text="${article.category}"></p>
+                                <h5 class="card-title text-start" th:text="${article.title}"></h5>
                                 <div class="d-md-block d-none">
-                                    <p class="card-subtile text-start">Texto Descritivo - subtitulo</p>
-                                    <p class="text-muted text-start">Publicado em 06/07/2024 - Em Jornal IF</p>
+                                    <p class="card-subtile text-start" th:text="${article.subtitle}"></p>
+                                    <p class="text-muted text-start" th:text="${article.dateCreated}"></p>
                                 </div>
-                                <a href="#" class="btn btn-about">Ler mais</a>
+                                <a th:href="@{/articles/{id}(id=${article.id})}" class="btn btn-primary">Ler Mais</a>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <hr>
-
-                <!-- Article Card -->
-                <div class="row">
-                    <div class="col-lg-8 article" id="articleContainer">
-                        <div class="card mb-3">
-                            <div class="card-img" id="articleImage">
-                                <img src="https://placehold.co/200" alt="Artigo 1">
-                            </div>
-                            <div class="card-body" id="articleContent">
-                                <p class="text-muted fw-medium text-start">Categoria</p>
-                                <h5 class="card-title text-start">Artigo 1</h5>
-                                <div class="d-md-block d-none">
-                                    <p class="card-subtile text-start">Texto Descritivo - subtitulo</p>
-                                    <p class="text-muted text-start">Publicado em 06/07/2024 - Em Jornal IF</p>
-                                </div>
-                                <a href="#" class="btn btn-about">Ler mais</a>
-                            </div>
-                        </div>
+                <!-- If there are no articles -->
+                <div th:if="${#lists.isEmpty(articles)}">
+                    <div class="alert alert-warning" role="alert">
+                        Não há artigos disponíveis no momento.
                     </div>
                 </div>
 
-                <hr>
-
-                <!-- Article Card -->
-                <div class="row">
-                    <div class="col-lg-8 article" id="articleContainer">
-                        <div class="card mb-3">
-                            <div class="card-img" id="articleImage">
-                                <img src="https://placehold.co/200" alt="Artigo 1">
-                            </div>
-                            <div class="card-body" id="articleContent">
-                                <p class="text-muted fw-medium text-start">Categoria</p>
-                                <h5 class="card-title text-start">Artigo 1</h5>
-                                <div class="d-md-block d-none">
-                                    <p class="card-subtile text-start">Texto Descritivo - subtitulo</p>
-                                    <p class="text-muted text-start">Publicado em 06/07/2024 - Em Jornal IF</p>
-                                </div>
-                                <a href="#" class="btn btn-about">Ler mais</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <hr>
-
-                <!-- Article Card -->
-                <div class="row">
-                    <div class="col-lg-8 article" id="articleContainer">
-                        <div class="card mb-3">
-                            <div class="card-img" id="articleImage">
-                                <img src="https://placehold.co/200" alt="Artigo 1">
-                            </div>
-                            <div class="card-body" id="articleContent">
-                                <p class="text-muted fw-medium text-start">Categoria</p>
-                                <h5 class="card-title text-start">Artigo 1</h5>
-                                <div class="d-md-block d-none">
-                                    <p class="card-subtile text-start">Texto Descritivo - subtitulo</p>
-                                    <p class="text-muted text-start">Publicado em 06/07/2024 - Em Jornal IF</p>
-                                </div>
-                                <a href="#" class="btn btn-about">Ler mais</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <hr>
-
-                <!-- pagination -->
-                <div class="row">
-                    <div class="col-lg-12">
-                        <nav aria-label="Page navigation example">
-                            <ul class="pagination justify-content-center">
-                                <li class="page-item disabled">
-                                    <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Anterior</a>
-                                </li>
-                                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item">
-                                    <a class="page-link" href="#">Próximo</a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
-                </div>
             </div>
 
             <!-- Sidebar -->
