--- a/src/main/resources/templates/articles/list.html
+++ b/src/main/resources/templates/articles/list.html
@@ -2,6 +2,8 @@
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jornal IF - Artigos</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/webjars/bootstrap/5.3.3/css/bootstrap.css">
@@ -56,7 +58,7 @@
 </div>
 
 <!-- Main Content -->
-<div class="container bg-light p-5" style="margin-top: 8em; height: 100%">
+<div class="container bg-light p-5" style="margin-top: 8em; min-height: 100vh">
 
     <!-- Title -->
     <h1 class="text-center text-uppercase fw-bold">Artigos</h1>
