--- a/src/main/resources/templates/edition/new.html
+++ b/src/main/resources/templates/edition/new.html
@@ -5,6 +5,7 @@
 >
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jornal IF - Criar Edição</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/webjars/bootstrap/5.3.3/css/bootstrap.css">
