--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Login</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="webjars/bootstrap/5.3.3/css/bootstrap.min.css">
@@ -39,6 +40,7 @@
             <button type="submit" class="btn">Entre</button>
         </form>
         <p class="mt-3 text-center">Não possui uma conta ainda? <a href="/register" class="link">Crie agora</a></p>
+        <p class="mt-3 text-center">Esqueceu sua senha? <a href="/forgot-password" class="link">Redefina agora</a></p>
         <!-- Guest login -->
         <div class="d-flex justify-content-center mt-3">
             <a href="/" class="btn btn-light rounded-pill shadow-sm">Entrar como convidado</a>
