correção no codigo do ResetPassController

--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -20,8 +20,8 @@
     <div class="row justify-content-center align-items-center">
 
         <!-- mensagem de erro -->
-        <div th:if="${param.error}" class="alert alert-danger mt-3" role="alert">
-            Usuário ou senha inválidos!
+        <div th:if="${param.error}" th:text="${param.error}" class="alert alert-danger col-md-6 text-center">
+            E-mail não encontrado.
         </div>
 
         <!-- formulário de login -->
