correção na linha 75 do ArticleController - alteração para editionsService

--- a/src/main/resources/templates/articles/article-new.html
+++ b/src/main/resources/templates/articles/article-new.html
@@ -105,7 +105,7 @@
         <div class="mb-3">
             <label for="edition" class="form-label">Edição</label>
             <select class="form-select" id="edition" name="edition" th:field="*{editions}" required>
-                <option th:each="edition : ${editions}" th:value="${edition.id}" th:text="${edition.title}"></option>
+                <option th:each="edition : ${editions}" th:value="${edition.id}" th:text="${edition.name}">Edition</option>
             </select>
         </div>
 
