alteração no estilo do article/detail e ajustes na url da imagem

--- a/src/main/resources/static/css/article/detail.css
+++ b/src/main/resources/static/css/article/detail.css
@@ -165,4 +165,11 @@
   text-align: justify;
 }
 
+@media (max-width: 768px) {
+  .img {
+    width: 100%;
+    aspect-ratio: 1/1;
+  }
+}
+
 /*# sourceMappingURL=detail.css.map */
