--- a/src/main/resources/static/sass/article/detail.sass
+++ b/src/main/resources/static/sass/article/detail.sass
@@ -48,3 +48,8 @@
     font-size: 1.5rem
     margin: 0 0 1rem 0
     text-align: justify
+
+@media (max-width: 768px)
+  .img
+    width: 100%
+    aspect-ratio: 1/1
